test/errors/type/str/rep2.yasl
mt.lookup('', .rep)(1, 1)
